--- a/css/sticker.scss
+++ b/css/sticker.scss
@@ -70,8 +70,8 @@
 
 
 			img {
-				width: 100%;
-				height: 100%;
+				// width: 100%;
+				// height: 100%;
 				object-fit: cover;
 				user-drag: none;
 				max-width: inherit;
