--- a/css/style.scss
+++ b/css/style.scss
@@ -1128,6 +1128,7 @@ header.scrolled + .image {
 	
 		&.terri {
 			top: 14.826%; left: 59.4745%;
+			max-width: 150px;
 		}
 
 		&.spiderman {
@@ -1141,6 +1142,7 @@ header.scrolled + .image {
 		&.edward {
 			left: 62.9328%;
 			top: 55.9624%;
+			max-width: 150px;
 		}
 
 
