--- a/css/ticket.scss
+++ b/css/ticket.scss
@@ -88,6 +88,12 @@
 		flex: 1 0 100%;
 		text-align: center;
 		display: none;
+
+
+		text-transform: uppercase;
+		font-weight: bold;
+		color: white;
+
 	}
 
 
